--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.1.0",
   "description": "Включите отображение скрытых файлов и папок в проводнике своей операционной системы, иначе вы не\r сможете выбрать и скопировать себе файлы настроек проекта, имена которых начинаются с точки.",
   "main": "index.js",
-  "homepage": "https://oxica.github.io/project-filmoteka",
+  "homepage": "https://yaroslavplaksii91.github.io/filmoteka",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-filmoteka/"
+    "build": "parcel build src/*.html --public-url /filmoteka/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/oxica/project-filmoteka.git"
+    "url": "git+https://github.com/YaroslavPlaksii91/filmoteka.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goxica/project-filmoteka/issues"
+    "url": "https://github.com/YaroslavPlaksii91/filmoteka/issues"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
